# neko

./: .clang-tidy  .gitignore  CMakeLists.txt  README.MD  main.cpp  main_window.cpp  main_window.h
core/: Cargo.toml  build.rs
core/include/: neko_core.h
core/src/: lib.rs  test_utils.rs
core/src/app/: app.rs  document_manager.rs  file_io_manager.rs  file_operations_manager.rs  mod.rs  tab.rs
core/src/commands/: executor.rs  mod.rs  tab.rs  types.rs
core/src/commands/file_explorer/: executor.rs  mod.rs  types.rs
core/src/commands/jump/: executor.rs  mod.rs  resolver.rs  types.rs
core/src/commands/tab/: executor.rs  mod.rs  types.rs
core/src/config/: config_manager.rs  manager.rs  mod.rs  types.rs
core/src/editor/: buffer.rs  cursor.rs  mod.rs
core/src/ffi/: bridge.rs  conversions.rs  mod.rs  qt_bridge.rs  wrappers.rs
core/src/ffi/controllers/: app.rs  command.rs  editor.rs  file_tree.rs  mod.rs  tab.rs
core/src/ffi/handles/: editor.rs  mod.rs
core/src/ffi/wrappers/: app.rs  command_palette.rs  commands.rs  config.rs  editor.rs  file_tree.rs  mod.rs  shortcuts.rs  theme.rs
core/src/ffi/wrappers/controllers/: app.rs
core/src/file_system/: error.rs  file_node.rs  file_tree.rs  mod.rs  operations.rs  result.rs  tree.rs  types.rs
core/src/shortcuts/: manager.rs  mod.rs  shortcuts_manager.rs  types.rs
core/src/tab/: closed_tab_store.rs  error.rs  history.rs  manager.rs  mod.rs  model.rs  tab.rs  tab_manager.rs  types.rs
core/src/text/: buffer.rs  change_set.rs  cursor.rs  cursor_manager.rs  edit_ops.rs  editor.rs  history.rs  mod.rs  selection.rs  selection_manager.rs  types.rs  widths.rs
core/src/text/cursor/: cursor_manager.rs  mod.rs  types.rs
core/src/text/document/: document_manager.rs  error.rs  error_types.rs  manager.rs  mod.rs  result.rs  types.rs
core/src/text/editor/: buffer.rs  edit_ops.rs  editor.rs  history.rs  mod.rs  result.rs  types.rs  width_manager.rs
core/src/text/selection/: manager.rs  mod.rs  selection_manager.rs  types.rs
core/src/text/view/: error.rs  manager.rs  mod.rs  types.rs  view_manager.rs
core/src/theme/: mod.rs  theme_manager.rs  types.rs
desktop/: CMakeLists.txt
desktop/src/: editor_widget.cpp  editor_widget.h  main.cpp  main_window.cpp  main_window.h
desktop/src/controllers/: editor_controller.cpp  editor_controller.h
desktop/src/core/api/: tab_core_api.h
desktop/src/core/bridge/: app_bridge.cpp  app_bridge.h
desktop/src/features/command_palette/: command_palette_mode.h  command_palette_widget.cpp  command_palette_widget.h  current_size_stacked_widget.cpp  current_size_stacked_widget.h  palette_divider.cpp  palette_divider.h  palette_frame.cpp  palette_frame.h
desktop/src/features/command_palette/types/: types.h
desktop/src/features/config/: config.cpp  config.h  config_manager.cpp  config_manager.h
desktop/src/features/context_menu/: command_registry.cpp  command_registry.h  context_menu_frame.cpp  context_menu_frame.h  context_menu_item.h  context_menu_item_kind.h  context_menu_registry.cpp  context_menu_registry.h  context_menu_widget.cpp  context_menu_widget.h
desktop/src/features/context_menu/providers/: tab_context.h
desktop/src/features/context_menu/types/: types.h
desktop/src/features/editor/: change_mask.h  editor_widget.cpp  editor_widget.h  gutter_widget.cpp  gutter_widget.h  row_col.h
desktop/src/features/editor/bridge/: editor_bridge.cpp  editor_bridge.h
desktop/src/features/editor/controllers/: editor_controller.cpp  editor_controller.h
desktop/src/features/editor/render/: editor_render_utils.cpp  editor_render_utils.h  editor_renderer.cpp  editor_renderer.h  gutter_renderer.cpp  gutter_renderer.h  render_state.h  render_theme.h
desktop/src/features/editor/types/: types.h
desktop/src/features/file_explorer/: file_explorer_widget.cpp  file_explorer_widget.h
desktop/src/features/file_explorer/bridge/: file_tree_bridge.cpp  file_tree_bridge.h
desktop/src/features/file_explorer/controllers/: file_explorer_controller.cpp  file_explorer_controller.h  file_tree_controller.cpp  file_tree_controller.h
desktop/src/features/file_explorer/render/: file_explorer_renderer.cpp  file_explorer_renderer.h
desktop/src/features/file_explorer/types/: types.h
desktop/src/features/main_window/: close_decision.h  main_window.cpp  main_window.h  save_result.h  ui_handles.h  workspace_ui_handles.h
desktop/src/features/main_window/connections/: editor_connections.cpp  editor_connections.h  file_explorer_connections.cpp  file_explorer_connections.h  main_window_connections.cpp  main_window_connections.h  theme_connections.cpp  theme_connections.h  ui_style_connections.cpp  ui_style_connections.h  workspace_connections.cpp  workspace_connections.h
desktop/src/features/main_window/controllers/: app_bridge.cpp  app_bridge.h  app_config_service.cpp  app_config_service.h  app_controller.cpp  app_controller.h  app_state_controller.cpp  app_state_controller.h  command_executor.cpp  command_executor.h  command_manager.cpp  command_manager.h  shortcuts_manager.cpp  shortcuts_manager.h  theme_manager.cpp  theme_manager.h  ui_style_manager.cpp  ui_style_manager.h  workspace_controller.cpp  workspace_controller.h  workspace_coordinator.cpp  workspace_coordinator.h
desktop/src/features/main_window/flows/: file_explorer_flows.cpp  tab_flows.cpp  (+2 more)
desktop/src/features/status_bar/: status_bar_widget.cpp  status_bar_widget.h
desktop/src/features/tab_bar/: tab_bar_widget.h  tab_widget.cpp  tab_widget.h
desktop/src/features/tabs/: tab_bar_widget.cpp  tab_bar_widget.h  tab_types.h  tab_widget.cpp  tab_widget.h
desktop/src/features/title_bar/: title_bar_widget.cpp  title_bar_widget.h
desktop/src/features/titlebar/: titlebar_widget.cpp  titlebar_widget.h
desktop/src/theme/: theme_provider.cpp  theme_provider.h  theme_types.h
desktop/src/theme/types/: types.h
desktop/src/types/: command_type.h  ffi_types_fwd.h  qt_types_fwd.h
desktop/src/utils/: editor_utils.cpp  editor_utils.h  gui_utils.cpp  gui_utils.h  mac_utils.h  mac_utils.mm  scroll_offset.h  ui_utils.cpp  ui_utils.h
(+21 files in other folders)
