[package]
name = "neko-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "neko_core"
crate-type = ["staticlib"]

[dependencies]
crop = "0.4.3"
cxx = "1.0.190"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
cxx-build = "1.0.190"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
